<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentosAdministrador.RegistraProveedor"
    android:background="#E7E7E6">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E7E7E6"
        android:orientation="vertical"
        android:padding="15dp">

        <!--REGISTRO TXT -->
        <TextView
            android:text="@string/RegistroTxt"
            android:gravity="center"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <!-- ICONO Y FECHA-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/DateRegister"
                android:text="@string/DateRegister"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendario_ico"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- FOTO DE PERFIL-->
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:src="@drawable/admin2"
            android:layout_marginTop="20dp"/>

        <!-- EMAIL-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/Email"
                    android:hint="@string/Email"
                    android:inputType="textEmailAddress"
                    android:layout_marginTop="20dp"
                    android:background="#0000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- PASSWORD-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/Password"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:background="#0000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- RUT-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/RutP"
                android:hint="@string/RutP"
                android:inputType="number"
                android:background="#0000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- NOMBRE-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Name"
                android:hint="@string/Name"
                android:inputType="textCapWords|textAutoCorrect"
                android:background="#0000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- APELLIDO-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/LastName"
                android:hint="@string/LastName"
                android:inputType="textCapWords|textAutoCorrect"
                android:background="#0000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/Register"
            android:text="@string/Register"
            android:background="#4164C6"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>